terraform/terraform-6/route-table-association.tf
resource "aws_route_table_association" "myrt01" {
  subnet_id      = aws_subnet.sub1.id
  route_table_id = aws_route_table.RT.id
}
